--- a/style/abstract/_variables.scss
+++ b/style/abstract/_variables.scss
@@ -1,12 +1,15 @@
 $color-primary: #eee7dd;
 $color-secondary: #a6a19a;
+$color-secondary-dark: #c4ae8f;
+$color-secondary-light: #e4dcd0;
 $color-accent: #af70ff;
 
 $color-white: #ffff;
-$color-black: #181616;
+$color-black: #242423;
 
 $fs1: 2.3rem;
 $fs2: 2rem;
+$fs3: 1.7rem;
 $fs4: 1.4rem;
-$fs5: 1.15rem;
+$fs5: 1.1rem;
 $fs6: 1rem;
