--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,9 @@
 @import "abstract/variables";
 @import "base/base";
-@import "page/navbar";
+@import "page/nav";
+@import "page/header";
+@import "page/home";
+@import "base/helper";
+@import "page/footer";
+@import "base/button";
+@import "page/package";
