--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -1,10 +1,42 @@
-html{
-    font-size: 82.5%;
+*,
+*::after,
+*::before{
+    margin: 0;
+    padding: 0;
+}
 
+html{
+    font-size: 100%;
 }
 
 body{
     color: $color-black;
     background-color: $color-primary;
-    margin: 0 2rem;
+    line-height: 1.4;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+h1{
+    font-size: $fs1;
+    font-weight: 400;
+}
+p{
+    font-size: $fs6;
+    font-weight: 300;
+    line-height: 1.6;
+}
+
+.services{
+    background-color: $color-white;
+    & h1{
+        margin-left: 15rem;
+        padding: 2rem 0;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    html{
+        font-size: 82.5%;
+    }
 }
