--- a/style/page/_package.scss
+++ b/style/page/_package.scss
@@ -1,9 +1,9 @@
 
 .package{
-    margin: 2rem 15rem;
+    margin: 3rem 15rem;
     max-width: 77rem;
     & .package-info{
-
+        margin-bottom: 6rem;
         & h1{
             margin: 2rem 0;
         }
