--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -11,7 +11,7 @@ html{
 
 body{
     color: $color-black;
-    background-color: $color-primary;
+    background-color: $color-white;
     line-height: 1.4;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
