--- a/style/page/_header.scss
+++ b/style/page/_header.scss
@@ -3,13 +3,14 @@
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
-    perspective: 3px;
- 
+    perspective: 1px;
+
 
     & .header{
         position: relative;
         transform-style: preserve-3d;
-        height: 100%;
+        height: 90%;
+        top: -5%;
         background-image: linear-gradient(0deg, rgba(68, 56, 63, 0.6), rgba(87, 22, 69, 0.6)), url("../../images/pregWoman.jpg");
         background-repeat: no-repeat;
         // background-size: 100% auto;
@@ -19,12 +20,13 @@
         // background-position: center center;
         // vertical-align: top;
         // transform-origin: center top;
-        transform: translateZ(-3px) scale(2.01);
+        transform: translateZ(-1px) scale(2.01);
+
 
         & .header-name{
             position: absolute;
             color: white;
-            top: 22rem;
+            top: 25rem;
             left: 50%;
             transform: translate(-50%, -50%);
             font-family: 'Sacramento', cursive;
@@ -62,6 +64,7 @@
     background-repeat: no-repeat;
     object-fit: cover;
     background-size: cover;
+    clip-path: ellipse(120% 100% at 50% 0%);
 
     & .header-name{
         position: absolute;
